Packaged Build Fix
- Fixed index.html location in Main.js
- Fixed pack command in package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eject": "react-scripts eject",
     "electron": "electron .",
     "dev": "nf start",
-    "pack": "electron-builder",
+    "electron-pack": "electron-builder",
     "preelectron-pack": "yarn build"
   },
   "repository": {
